objects/zkmulti__MCShipmentInfo__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Allow_Record_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternateCity__c</fullName>
        <label>Alternate City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternateCountry__c</fullName>
        <label>Alternate Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternateName__c</fullName>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternatePhone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternateStateProvince__c</fullName>
        <label>Alternate State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternateStreet__c</fullName>
        <label>Alternate Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternateZipPostalCodeExt__c</fullName>
        <label>Alternate Zip/Postal Code Ext</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__AlternateZipPostalCode__c</fullName>
        <label>Alternate Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Amazon_Order_Id__c</fullName>
        <label>Amazon Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Name__c</fullName>
        <label>Billing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Branding__c</fullName>
        <label>Branding</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CertificateNumber__c</fullName>
        <label>Certificate Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CloseTime__c</fullName>
        <label>Close Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>zkmulti__Confirmed_By_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed By Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contents_Explanation__c</fullName>
        <label>Contents Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contents_Type__c</fullName>
        <label>Contents Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Customs_Certify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customs Certify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Customs_Signer__c</fullName>
        <label>Customs Signer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DutiesAccountPostalCode__c</fullName>
        <label>Duties Account Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DutiesPaymentType__c</fullName>
        <label>Duties/Taxes/Fees Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DutiesPayorAccountCountry__c</fullName>
        <label>Duties Payor Account Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DutiesPayorAccount__c</fullName>
        <label>Duties/Taxes/Fees Payor Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EEL_PFC__c</fullName>
        <label>EEL PFC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnEstimatedDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Estimated Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EMailNotifyOnTender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Tender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Earliest_Delivery__c</fullName>
        <label>Earliest Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Earliest_Pickup__c</fullName>
        <label>Earliest Pickup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmailNotifyOnShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify On Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Entry_Facility__c</fullName>
        <label>Entry Facility</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Entry_Number__c</fullName>
        <label>Entry Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExportComplianceStatement__c</fullName>
        <label>Export Compliance Statement Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FreightBookingConfirmationNumber__c</fullName>
        <label>Freight Booking Confirmation Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FreightClass__c</fullName>
        <label>Freight Class (Deprecated)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FreightPackingListEnclosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Packing List Enclosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__HandlingHeight__c</fullName>
        <label>Handling Height</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__HandlingLength__c</fullName>
        <label>Handling Length</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__HandlingQuantity__c</fullName>
        <label>Handling Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__HandlingUnits__c</fullName>
        <label>Handling Units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__HandlingWidth__c</fullName>
        <label>Handling Width</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Hide_Sender_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Sender Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IneligibleForMoneyBackGuarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ineligible for Money Back Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Resolution__c</fullName>
        <label>Label Image Resolution</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Rotation__c</fullName>
        <label>Label Image Rotation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Size__c</fullName>
        <label>Label Image Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Last_Track_Update_Status_Code__c</fullName>
        <label>Last Track Update Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Latest_Delivery__c</fullName>
        <label>Latest Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Latest_Pickup__c</fullName>
        <label>Latest Pickup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__LicenseNumber__c</fullName>
        <label>License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NegotiatedRatesMessage__c</fullName>
        <label>Negotiated Rates Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__NonMachineable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Machineable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Non_Delivery__c</fullName>
        <label>Non Delivery</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Order_Id__c</fullName>
        <label>Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PO_ZipCode__c</fullName>
        <label>PO ZipCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackageId__c</fullName>
        <label>PackageId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ReadyTime__c</fullName>
        <label>Ready Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>zkmulti__RecipientCustomsIdType__c</fullName>
        <label>Recipient Customs ID Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__RecipientCustomsId__c</fullName>
        <label>Recipient Customs ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__RecipientTaxIdType__c</fullName>
        <label>Recipient Tax ID Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__RecipientTaxId__c</fullName>
        <label>Recipient Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__RecipientTimeZone__c</fullName>
        <label>Recipient Time Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ReferenceBarCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Bar Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Restriction_Comments__c</fullName>
        <label>Restriction Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Restriction_Type__c</fullName>
        <label>Restriction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Returned_To_Sender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned To Sender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SenderTaxIdType__c</fullName>
        <label>Sender Tax ID Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SenderTaxId__c</fullName>
        <label>Sender Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ShipmentTypeExt__c</fullName>
        <label>Shipment Type Ext</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatoryDate__c</fullName>
        <label>Signatory Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatoryPersonName__c</fullName>
        <label>Signatory Person Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatoryPersonTitle__c</fullName>
        <label>Signatory Person Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatoryPlace__c</fullName>
        <label>Signatory Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sort_Type__c</fullName>
        <label>Sort Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalCustomsValue__c</fullName>
        <label>Total Customs Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__TotalRebates__c</fullName>
        <label>Total Rebates</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__USPSEndorsement__c</fullName>
        <label>USPS Endorsement</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UseAlternateAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alternate Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Validate_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__WebServiceShipmentId__c</fullName>
        <label>WebServiceShipmentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment Info</label>
    <listViews>
        <fullName>Nolan_Daigle_MCShipmentInfo</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Shipment Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>